--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -930,8 +930,8 @@
 	// ### Use CD & WP as GPIO
 	pinctrl-0 = <&pinctrl_usdhc1_1>;
 	bus-width = <4>;
-	cd-gpios = <&gpio1 1 0>;
-	wp-gpios = <&gpio4 20 0>;
+	cd-gpios = <&gpio1 1 GPIO_ACTIVE_LOW>;
+	//wp-gpios = <&gpio4 20 GPIO_ACTIVE_HIGH>;
 	no-1-8-v;
 	keep-power-in-suspend;
 	enable-sdio-wakeup;
@@ -950,8 +950,8 @@
 	// ### Use CD & WP as GPIO
 	pinctrl-0 = <&pinctrl_usdhc2_2>;
 	bus-width = <4>;
-	cd-gpios = <&gpio1 4 1>;
-	wp-gpios = <&gpio1 2 0>;
+	cd-gpios = <&gpio1 4 GPIO_ACTIVE_LOW>;
+	wp-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
 	no-1-8-v;
 	keep-power-in-suspend;
 	enable-sdio-wakeup;
