--- a/arch/arm/boot/dts/picocoremx6ul.dts
+++ b/arch/arm/boot/dts/picocoremx6ul.dts
@@ -68,7 +68,6 @@ wvga {					\
  * On efusA7UL, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
  */
-//#define CONFIG_PICOCOREMX6UL_4WTOUCH_SX8655_ONBOARD
 #define CONFIG_PICOCOREMX6UL_4WTOUCH_SX8655_RGBADAPTER
 //#define CONFIG_PICOCOREMX6UL_CAPTOUCH_MXT224
 //#define CONFIG_PICOCOREMX6UL_CAPTOUCH_FT5x06
@@ -460,6 +459,55 @@ wvga {					\
 		};
 	};
 
+#ifdef CONFIG_PICOCOREMX6UL_CAPTOUCH_MXT224
+	mxt224@4a {
+		compatible = "atmel,maxtouch";
+		reg = <0x4a>;
+		interrupt-parent = <&gpio7>;
+		interrupts = <0 2>;
+		atmel,cfg_name = "atmel/mxt224.cfg";
+		atmel,reset-gpio = <&gpio3 21 GPIO_ACTIVE_LOW>;
+#if 0
+		atmel,suspend-mode = <2>;
+		vdd = <&reg_atmel_mxt_vdd>;
+		avdd = <&reg_atmel_mxt_avdd>;
+#endif
+	};
+#endif
+
+        /* Touch driver Focaltech  */
+#if 0
+	/* Mainline driver, may only work on EDT displays */
+	edt-ft5x06@38 {
+		compatible = "edt,edt-ft5306";
+		reg = <0x38>;
+		threshold = <25>;
+		gain = <8>;
+		offset = <0>;
+		interrupt-parent = <&gpio7>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpios = <&gpio3 21 GPIO_ACTIVE_LOW>;
+	};
+#else
+
+#ifdef CONFIG_PICOCOREMX6UL_CAPTOUCH_FT5x06
+	/* F&S driver V3.0 */
+	ft5x06_ts@38 {
+		compatible = "FocalTech,ft5306";
+		reg = <0x38>;
+		fingers = <2>;
+		touchscreen-size-x = <800>;
+		touchscreen-size-y = <480>;
+		threshold = <25>;
+		interrupt-parent = <&gpio7>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpios = <&gpio3 21 GPIO_ACTIVE_LOW>;
+		linux,wakeup;
+	};
+#endif
+
+#endif
+
 #ifdef CONFIG_PICOCOREMX6UL_4WTOUCH_SX8655_RGBADAPTER
 	/* 4/5 wire analog resistive touch, controller on RGB adapter */
 	sx8654@49 {
@@ -478,6 +526,28 @@ wvga {					\
 	};
 #endif
 
+#ifdef CONFIG_PICOCOREMX6UL_CAPTOUCH_SITRONIX
+	/* Sitronix PCAP touch on Touch-Connector (I2C) */
+	st1633i@48 {
+		compatible = "sitronix";
+		reg = <0x48>;
+		swap-xy;
+		interrupt-parent = <&gpio7>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio3 21 GPIO_ACTIVE_LOW>;
+	};
+#endif
+
+#ifdef CONFIG_PICOCOREMX6UL_CAPTOUCH_ILITEK
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
+	ili210x@41 {
+		compatible = "Ilitek,ili210x";
+		reg = <0x41>;
+		interrupt-parent = <&gpio7>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio3 21 GPIO_ACTIVE_LOW>;
+	};
+#endif
 };
 
 
