--- a/arch/arm/boot/dts/cube2.0.dts
+++ b/arch/arm/boot/dts/cube2.0.dts
@@ -1,9 +1,16 @@
 /*
- * Copyright (C) 2016-2017 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2019 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
  * published by the Free Software Foundation.
+ *
+ * The F&S cube2.0 module is available with i.MX6UL and i.MX6ULL CPU. So we
+ * need two different device trees. This is the version for i.MX6ULL. However
+ * as most device tree settings are the same in both cases, we simply add the
+ * macro CONFIG_CUBE2_0_ULL here and include the regular device tree for the
+ * i.MX6UL variant. Differences between i.MX6UL and i.MX6ULL can then be made
+ * there by looking at this macro.
  */
 
 /* CMA: Set 64 MB for Continuous Memory Allocator */
@@ -15,7 +22,11 @@
 /dts-v1/;
 
 #include <dt-bindings/input/input.h>
+#ifdef CONFIG_CUBE2_0_ULL
+#include "imx6ull.dtsi"
+#else
 #include "imx6ul.dtsi"
+#endif
 
 / {
 	model = "F&S Cube2.0";
@@ -244,10 +255,18 @@
 	status = "okay";
 };
 
+#ifdef CONFIG_CUBE2_0_ULL
+&iomuxc_snvs
+{
+	cube2_0_ull {
+	};
+};
+#endif
+
 &iomuxc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog_1>;
-	efusa7ul {
+	cube2_0 {
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
 				/* WLAN 32kHz clock */
