--- a/arch/arm/boot/dts/gar1.dts
+++ b/arch/arm/boot/dts/gar1.dts
@@ -9,7 +9,7 @@
 /dts-v1/;
 
 /* Set board revision as 3-digit number, e.g. 100 for board rev. 1.00 */
-#define CONFIG_GAR1_BOARD_REVISION	100
+#define CONFIG_GAR1_BOARD_REVISION	140
 
 /* CMA: Set 64 MB for Continuous Memory Allocator */
 #define CONFIG_GAR1_CMA_SIZE 0x4000000
@@ -256,6 +256,16 @@
 	status = "okay";
 };
 
+/* UART_C */
+#if (CONFIG_GAR1_BOARD_REVISION >= 140)
+&uart4 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart4>;
+	uart-has-rtscts;
+	status = "okay";
+};
+#endif
+
 &usbotg1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg1>;
@@ -333,8 +343,17 @@
 				/* GPIO0 - GPIO3 */
 				MX6UL_PAD_UART3_RTS_B__GPIO1_IO27	0x000b0
 				MX6UL_PAD_UART3_CTS_B__GPIO1_IO26	0x000b0
+#if (CONFIG_GAR1_BOARD_REVISION >= 140)
+				MX6UL_PAD_LCD_DATA04__GPIO3_IO09	0x000b0
+				MX6UL_PAD_LCD_DATA05__GPIO3_IO10	0x000b0
+				/* USB_OTG1 Power on/off based on customers' demand using
+				 * GPIO pin.
+				 */
+				MX6UL_PAD_SD1_CMD__GPIO2_IO16		0x000b0
+#else
 				MX6UL_PAD_UART4_TX_DATA__GPIO1_IO28	0x000b0
 				MX6UL_PAD_UART4_RX_DATA__GPIO1_IO29	0x000b0
+#endif
 				/* RTC IRQ */
 				MX6UL_PAD_LCD_RESET__GPIO3_IO04		0x0b0b0
 			>;
@@ -426,6 +445,29 @@
 				MX6UL_PAD_UART3_TX_DATA__UART2_DCE_CTS	0x1b0b1
 			>;
 		};
+
+#if (CONFIG_GAR1_BOARD_REVISION >= 140)
+		pinctrl_uart4: uart4grp {
+			fsl,pins = <
+				MX6UL_PAD_LCD_HSYNC__UART4_DTE_RTS 		0x1b0b1
+				MX6UL_PAD_LCD_VSYNC__UART4_DTE_CTS		0x1b0b1
+				MX6UL_PAD_UART4_TX_DATA__UART4_DCE_TX		0x1b0b1
+				MX6UL_PAD_UART4_RX_DATA__UART4_DCE_RX		0x1b0b1
+				/* UART4_DTR */
+ 				MX6UL_PAD_LCD_DATA06__GPIO3_IO11		0x030b0
+				/* UART4_DSR */
+				MX6UL_PAD_LCD_DATA07__GPIO3_IO12		0x030b0
+				/* UART4_DCD */
+				MX6UL_PAD_LCD_DATA08__GPIO3_IO13		0x030b0
+				/* UART4_RI */
+				MX6UL_PAD_LCD_DATA09__GPIO3_IO14		0x030b0
+				/* UART4_SHDN */
+				MX6UL_PAD_LCD_DATA10__GPIO3_IO15		0x030b0
+				/* UART4_ONLINE */
+				MX6UL_PAD_LCD_DATA11__GPIO3_IO16		0x030b0
+			>;
+		};
+#endif
 
 		pinctrl_usbotg1: usbotg1grp {
 			fsl,pins = <
