--- a/arch/arm/configs/fsimx6sx_defconfig
+++ b/arch/arm/configs/fsimx6sx_defconfig
@@ -220,6 +220,7 @@ CONFIG_CFG80211_WEXT=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
+# CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 CONFIG_AUXILIARY_CORE=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=128
