--- a/drivers/video/fbdev/mxc/Kconfig
+++ b/drivers/video/fbdev/mxc/Kconfig
@@ -66,6 +66,11 @@ config FB_MXC_TRULY_PANEL_TFT3P5581E
 	depends on FB_MXC_DISP_FRAMEWORK || FB_MXC_SYNC_PANEL
 	depends on FB_MXC_MIPI_DSI_SAMSUNG || FB_MXC_MIPI_DSI_NORTHWEST
 
+config FB_MXC_YES_OPTOELECTRONICS_PANEL_YTC310KLAA
+	tristate "Yes Optoelectronics Panel YTC310KLAA"
+	depends on FB_MXC_DISP_FRAMEWORK || FB_MXC_SYNC_PANEL
+	depends on FB_MXC_MIPI_DSI_SAMSUNG || FB_MXC_MIPI_DSI_NORTHWEST
+
 config FB_MXC_BT656
 	tristate "MXC BT656 and BT1120 output"
 	depends on FB_MXC_SYNC_PANEL
